2004-07-04  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated.

	* configure.in: Bumped the version to 2.1.7

	* gmime/gmime-parser.c (parser_construct_leaf_part): Removed code
	to check that the content_type argument is NULL - it can never be
	NULL.
	(parser_scan_multipart_face): Fixed a possible buffer-overrun.

	* gmime/gmime-object.c (process_header): Modified to call
	g_mime_object_set_content_type() if we got called with a
	Content-Type header. This way all the ::set_content_type()
	subclass methods get a chance to update the object's state.
	(process_header): Return TRUE if we've "processed" the value or
	FALSE otherwise.
	(add_header): Only add the header if process_header() didn't do
	anything with the header.
	(set_header): Same.

	* gmime/gmime-message.c (g_mime_message_set_sender): Parse the
	sender string so we can properly encode it before setting it as
	the From header.

2004-06-28  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (parser_scan_content): Updated to handle
	crlf sequences.
	(parser_scan_mime_part_content): Same.
	(crlf2lf): New function to convert CRLF to LF.
	(parser_scan_multipart_face): Convert the pre/postface into lf
	format.

2004-06-27  Jeffrey Stedfast  <fejj@novell.com>

	* util/url-scanner.c (g_url_web_end): Some fixes that I had to do
	recently for Camel as well.

2004-06-22  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (parser_construct_leaf_part): Only destroy
	the existing content_type on the object if it is non-NULL.
	(parser_construct_multipart): Same.

2004-06-15  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Added --enable-profile option and removed
	--enable-gprof. --enable-profile enables gprof and gcov.

	* gmime/gmime-parser.c: #include <stdlib.h> for strtoul()
	(parser_construct_leaf_part): Got rid of an unused variable.

	* gmime/gmime-param.c (rfc2184_param_new): Got rid of an unused
	variable.
	(rfc2184_decode): Got rid of an unused variable.
